--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,6 +14,7 @@
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.5",
     "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.11",
     "react": "19.0.0",
     "react-native": "0.79.6",
     "react-native-safe-area-context": "5.4.0",
