--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,8 +17,11 @@
     "expo-system-ui": "~5.0.11",
     "react": "19.0.0",
     "react-native": "0.79.6",
+    "react-native-edge-to-edge": "^1.6.2",
+    "react-native-nitro-modules": "0.28.0",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1"
+    "react-native-screens": "~4.11.1",
+    "react-native-unistyles": "^3.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
