--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,6 +14,7 @@
     "expo-constants": "~17.1.7",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.5",
+    "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.11",
     "react": "19.0.0",
