--- a/mobile/package.json
+++ b/mobile/package.json
@@ -23,6 +23,8 @@
     "react-native-nitro-modules": "0.28.0",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
+    "react-native-svg-transformer": "^1.5.1",
     "react-native-unistyles": "^3.0.10"
   },
   "devDependencies": {
